# ChangeLog for gnome-extra/polkit-gnome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/polkit-gnome/ChangeLog,v 1.33 2011/03/22 21:13:35 xarthisius Exp $

  22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> polkit-gnome-0.99.ebuild:
  ppc/ppc64 stable wrt #354509

*polkit-gnome-0.101-r1 (21 Mar 2011)

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -polkit-gnome-0.101.ebuild, +polkit-gnome-0.101-r1.ebuild,
  files/polkit-gnome-authentication-agent-1.desktop:
  Add AutostartCondition to not autostart with authentication agent GNOME
  Shell

  19 Mar 2011; Raúl Porcel <armin76@gentoo.org> polkit-gnome-0.96-r1.ebuild,
  polkit-gnome-0.99.ebuild, polkit-gnome-0.100.ebuild,
  polkit-gnome-0.101.ebuild:
  Add ~sh

  19 Mar 2011; Raúl Porcel <armin76@gentoo.org> polkit-gnome-0.99.ebuild:
  alpha/ia64/sparc stable wrt #354509

  13 Mar 2011; Markus Meier <maekke@gentoo.org> polkit-gnome-0.99.ebuild:
  arm stable, bug #354509

*polkit-gnome-0.101 (11 Mar 2011)

  11 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  +polkit-gnome-0.101.ebuild:
  Version bump.

  04 Mar 2011; Thomas Kahle <tomka@gentoo.org> polkit-gnome-0.99.ebuild:
  x86 stable per bug 354509

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> polkit-gnome-0.99.ebuild:
  Stable on amd64 wrt bug #354509

*polkit-gnome-0.100 (23 Feb 2011)

  23 Feb 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +polkit-gnome-0.100.ebuild,
  +files/polkit-gnome-authentication-agent-1.desktop:
  Bump to 0.100, manually add autostart desktop file

  31 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org>
  polkit-gnome-0.96-r1.ebuild, polkit-gnome-0.99.ebuild:
  Pin gtk+ to slot 2.

  28 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> polkit-gnome-0.99.ebuild:
  Remove unused app-text/scrollkeeper and gnome-base/gconf dependencies wrt
  #349954 by Andrew Brouwers.

  12 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  polkit-gnome-0.96-r1.ebuild: