@@ -1,11 +1,31 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX polkit-gnome-0.95-fix-make-check.patch 196 RMD160 9fab67298badb3f951a09704ea588c456f139871 SHA1 31f68277441bb529ca821c872bf667396bb1feeb SHA256 9df1e9bf693383a99b6604035793802596a014537995f0916dc859762bcd736d
 AUX polkit-gnome-0.95-parallel-build-failure.patch 303 RMD160 7aec98c3a2141e26647e1f4025abdfe94ba4efcc SHA1 efb5577503f14ef94fb95276f49f9b13f45b8ad1 SHA256 74d38c00aa3e782d3712ba296a85344618a8bd936822d0148df660ff058e69b7
 AUX polkit-gnome-authentication-agent-1.desktop 271 RMD160 bc2558e787344055b885fc86716a6d68863abe53 SHA1 0a259469459f3f932891c8455ae7fd341cf01163 SHA256 9dad12b09e921d088c0d3687fc2c08eaf32976844c8c17a94e1c1daf8b72c218
 DIST polkit-gnome-0.100.tar.bz2 390684 RMD160 70036d738fa625d38fb71a6ab75b29da5627ae1e SHA1 0788842005821051c86961ae9cc4a615e9893240 SHA256 d52bbcf6cdb7b0be499e6b220653dccaf0fed860806bdfd8112ef1fd1c26653d
 DIST polkit-gnome-0.101.tar.bz2 408431 RMD160 cb620f245f9b2b2fb463db76f1e3e684d79c5886 SHA1 23a886cecba4a7466deb6655224f20f29d87d305 SHA256 f1452e37b6681a0ade2c0cbb3734e6f78c421b958ab4d4eb6a2cd3b9f50db8d0
 DIST polkit-gnome-0.99.tar.bz2 388069 RMD160 1f6d6840693d3d88682af8295b1f8b5030bd9f33 SHA1 8d67b03943be3da9b8bbe1b4a036d778f998a3d0 SHA256 73c4d04aa89d9a9687f3650327c0ec1cba704e9d5b7fc193958fa81d621208ba
-EBUILD polkit-gnome-0.100.ebuild 1891 RMD160 1660227b6d647ae37c16e89194350eea1307222d SHA1 7f213c8fc7d5dbaf6c70decbd8a198f2f0094c92 SHA256 eafd962f48e52deabdc82ef8ed95733933940b8afefb037615336cf737615f71
-EBUILD polkit-gnome-0.101-r1.ebuild 1841 RMD160 752cbfd6549fa0c08084a9ba7035d45f418c5588 SHA1 0c47cc56c1b07431d5d47bcb0e883d4373a9a40f SHA256 de8d9e855338641397003c5e4fa4765683dc4f6180726f54b2a379e84ae87415
-EBUILD polkit-gnome-0.99.ebuild 1702 RMD160 970df25707d651f0d8fc47eb0320ae7e23914c0c SHA1 b9f5f9653e5f54430cb12c2a5818ef8f1e0046b2 SHA256 103b06576173aa936a3f3b4b28a2e0434bbbca0854e21b2fee3d89c57f74ea22
-MISC ChangeLog 4876 RMD160 3a1ea739aa5811dc19aef00d8a2cf6f6e611cf90 SHA1 95b0e7e8e370c8b04e808184fd991074a55bd83c SHA256 c5383ba61a75d3b80dbf122e1c68507c0bc1f2528e9e71983d6b058d488fcc8f
+EBUILD polkit-gnome-0.100.ebuild 1904 RMD160 a13b7c52c06a05d4d91b05cd7e117e4c951f629c SHA1 ef7d20838825ada75dd032b343683cbfe1343d59 SHA256 7b3682177207e75c0d927c87d956bbe20d8dea7f397d6e194b8ba2f44528ce57
+EBUILD polkit-gnome-0.101-r1.ebuild 1853 RMD160 9cf8a78c1922d52043c063e94ec21a6fe6ecb76d SHA1 aa5cf1055b54f25533b7599e9891980a01a45eea SHA256 48cefcd5a019eebb875f741078b11e96ad823b03218147ba5f0063cd06e8c498
+EBUILD polkit-gnome-0.99.ebuild 1713 RMD160 ee7efc36a2f10b0c15a35e586f020d3aa957d39d SHA1 75da27396844c390c93a45c55acdca76ed29efc8 SHA256 13011d72d27bfb45f6f1b902a9ad80941114f352c076588f4b55626e03f7535d
+MISC ChangeLog 5091 RMD160 cef7e9d361e456ac0c29d02353978f527725a752 SHA1 c108e1c20f7de5961e023c7d70d643bcddc4862b SHA256 6a2c059081e90008c3801de1f655db252968cc395deed791b13a1e7671e3f591
 MISC metadata.xml 376 RMD160 8c718557c5de01a6b342f7c866c9690a90e1928e SHA1 b19aa2a188a24437f3529396ca9471437a3b012b SHA256 b201b0413405789b51dc0e76833050159a011be2312de5068976f228ca9b3ab3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBCAAGBQJNnXeFAAoJELHSF2kinlg4gFUQAIJsyKmQ3NvKgHejQfI/UXBy
+1bjYJAu0qf/1ziv/GxO0w4iGU6giK9NHkQlcMqzJsFf59A8GUfZmasVqHYEcGZx4
+bpMLgsxVMSY3J4l7IQhSTUDgj5Psu2KtQmQikzJs7jqAJVtAKWrrqaELOXksh7P8
+/TKN8WrXuJFpoCX3LCNeUn+MzIYacYiJReRyTHosd1wPCCcK8f8FeyDI7Ai1E3Yo
+C+3C3m8jyz97NkJejEpykKBqkgkfuAg5iTnS1ljPa4ZeLLkJdkiIBZOSyh/L8r6x
+vWXiqF8qeFVorC/BdxXJH3UmdX5PptqSlP339AD8hQi3tofX/Gi6vT2nPFrZ20Dp
+KGLLBA+Uh3CtHis1o107jafTSc1Mc5Dis4FIwUVaQfOp6BXZHS1I+WWtQUuokiwx
+pRR63xjPAgEpDl1kSdA1QAye6vl5uioVacEWY1KvlrOj6l2XdKkf5DS8+PTpFK5I
+vVUEW7FMO2+Xy+UTDRGd1VigrcHXdWcr3fpgy353OFfB8CPVQYXQwuPe2FxAlovt
+CucRvtTPd78PSP0wiDx5WKk5nul5Ks14QktaZpKaXiOpCKzGwWz9mlh0g/R9yw4t
+RUISkhkUKvnfoaTMSMbmGpKcXiqtx3CmXCxc0WAzt6m0e5o1VXsjTnelobmbtOSm
+fv+Km4buEjZfmGdX2M1X
+=/dNG
+-----END PGP SIGNATURE-----
