@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/polkit-gnome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/polkit-gnome/ChangeLog,v 1.33 2011/03/22 21:13:35 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/polkit-gnome/ChangeLog,v 1.34 2011/04/07 08:36:04 abcd Exp $
+
+  07 Apr 2011; Jonathan Callen <abcd@gentoo.org> polkit-gnome-0.99.ebuild,
+  polkit-gnome-0.100.ebuild, polkit-gnome-0.101-r1.ebuild:
+  Depend on gtk+[introspection?] for proper introspection support, fixes bug
+  362401
 
   22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> polkit-gnome-0.99.ebuild:
   ppc/ppc64 stable wrt #354509
